Add heuristic for primary monitor

Use the first monitor returned by RANDR as primary, if primary
is not set and no LVDS is found.

https://bugzilla.gnome.org/show_bug.cgi?id=615128
(cherry picked from commit 53fae3247c2d283d45a0ecbad0425331b072983a)